# kvartirka_test

./: README.md  docker-compose.yaml  pyproject.toml
kvartirka/: .dockerignore  Dockerfile  entrypoint.sh  fixtures.json  pyproject.toml
kvartirka/api/: admin.py  models.py  permissions.py  serializers.py  serializers_raw.py  tasks.py  urls.py  utils.py  views.py
kvartirka/api/migrations/: 0001_initial.py  0002_initial.py  0002_remove_comment_post.py  0003_auto_20210819_0644.py
kvartirka/app_user/: apps.py  middleware.py  models.py
kvartirka/app_user/migrations/: 0001_initial.py
kvartirka/kvartirka/: celery.py  settings.py  urls.py
nginx/: nginx.conf
postgres/: init.sh
